Update auth, and add code for requirement